Squash bug, fix media query for badges

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,9 +150,6 @@ header h1 {
   padding-left: 5px;
 }
 
-#badges {
-}
-
 .badge {
   width: 48px;
   align-items: center;
@@ -457,11 +454,13 @@ header h1 {
     width: 88% !important;
   }
 
-  .level-piece-board {
-    margin-top: 3px;
-    margin-bottom: 0px;
-    flex-direction: row !important;
+  .level-score-badges {
     justify-content: space-around;
+    margin-top: -10px;
+  }
+
+  .badges-section {
+    border: none;
   }
 
   .contact-info {
